<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textview_state1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_main_task"
        android:gravity="center"
        android:paddingTop="6dp"
        android:tag="tasklist"
        android:text="@string/tab_text_tasklist"
        android:textColor="@color/main_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textview_state2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_main_knowledge"
        android:gravity="center"
        android:paddingTop="6dp"
        android:tag="knowledge"
        android:text="@string/tab_text_knowledge"
        android:textColor="@color/main_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textview_state3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_main_information"
        android:gravity="center"
        android:paddingTop="6dp"
        android:tag="information"
        android:text="@string/tab_text_information"
        android:textColor="@color/main_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textview_state4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/selector_main_mine"
        android:gravity="center"
        android:paddingTop="6dp"
        android:tag="personal"
        android:text="@string/tab_text_personal"
        android:textColor="@color/main_white"
        android:textSize="14sp" />

</LinearLayout>