<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_signin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/logo"
        android:orientation="vertical">

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_login_username"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="286dp"
            android:background="@drawable/shape_bg_white_stroke_no_solid"
            android:drawableLeft="@mipmap/account_login_username"
            android:drawablePadding="12dp"
            android:hint="@string/common_input_username"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:textColorHint="@color/main_white" />

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_login_password"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:background="@drawable/shape_bg_white_stroke_no_solid"
            android:drawableLeft="@mipmap/account_login_password"
            android:drawablePadding="12dp"
            android:hint="@string/common_input_password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:textColorHint="@color/main_white" />

        <ToggleButton
            android:id="@+id/tb_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_toggle_button"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21dp"
            android:background="@drawable/shape_input"
            android:text="@string/commom_login"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="@dimen/login_input_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp">

            <TextView
                android:id="@+id/tv_lost_password"
                style="@style/tv_list_white_style"
                android:text="@string/commom_lost_password" />

            <TextView
                android:id="@+id/tv_register_account"
                style="@style/tv_list_white_style"
                android:layout_alignParentRight="true"
                android:text="@string/common_register_account" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
