<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_title_sms_code"
        layout="@layout/layout_title_common" />

    <RelativeLayout
        android:id="@+id/rl_sms_code_1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/layout_title_sms_code"
        android:layout_marginTop="20dp"
        android:background="@color/main_white">

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_sms_code_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/btn_get_valicate_code"
            android:background="@drawable/shape_input"
            android:hint="@string/common_phone_no"
            android:inputType="phone"
            android:maxLength="11" />

        <com.overtech.lenovo.widget.TimeButton
            android:id="@+id/btn_get_valicate_code"
            style="@style/tv_hint_white_style"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_disable"
            android:enabled="false"
            android:text="@string/common_get_sms_code" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rl_sms_code_2"
        android:layout_centerHorizontal="true"
        android:background="@color/main_disable" />

    <RelativeLayout
        android:id="@+id/rl_sms_code_2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_sms_code_1"
        android:background="@color/main_white">

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_valicate_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_input"
            android:hint="@string/common_input_sms_code"
            android:inputType="number"
            android:maxLength="6" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_valicate_sms_code"
        style="@style/CommonUIButton"
        android:layout_below="@+id/rl_sms_code_2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_button_visiable"
        android:text="@string/common_do_next" />

</RelativeLayout>