<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:contentPadding="16dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workorder_code"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_workorder_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="92374"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contract_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_workorder_contract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="JINS门店项目"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workorder_receive_time"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_workorder_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016-10-10"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workorder_basic_money"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_workorder_standard_fee_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="300元"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_status"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_workorder_pay_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未支付"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>