<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.business.common.password.ResetPasswordActivity">

    <include
        android:id="@+id/layout_reset_password"
        layout="@layout/layout_title_common" />

    <RelativeLayout
        android:id="@+id/rl_reset_password_1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/layout_reset_password"
        android:layout_marginTop="20dp"
        android:background="@color/main_white">

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_reset_password_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_input"
            android:hint="@string/common_new_password"
            android:inputType="textPassword"
            android:maxLength="18" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rl_reset_password_2"
        android:layout_centerHorizontal="true"
        android:background="@color/main_disable" />

    <RelativeLayout
        android:id="@+id/rl_reset_password_2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_reset_password_1"
        android:background="@color/main_white">

        <com.overtech.lenovo.widget.EditTextWithDelete
            android:id="@+id/et_reset_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_input"
            android:hint="@string/common_new_password_confirm"
            android:inputType="textPassword"
            android:maxLength="18" />
    </RelativeLayout>

    <Button
    android:id="@+id/btn_reset_password"
    style="@style/CommonUIButton"
    android:layout_below="@+id/rl_reset_password_2"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="25dp"
    android:background="@drawable/shape_button_visiable"
    android:text="@string/common_do_next"
    android:textColor="@color/main_white" />

</RelativeLayout>
